k8s/apps/gift-viewer/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gift-viewer
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: gift-viewer
  template:
    metadata:
      labels:
        component: gift-viewer
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: app
          image: ghcr.io/gastbob40/gift-viewer
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
      securityContext:
        fsGroup: 2000
