k8s/apps/gift-viewer/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gift-viewer

spec:
  type: ClusterIP
  selector:
    component: gift-viewer
  ports:
    - name: http
      port: 8000
      targetPort: http
